[gd_scene load_steps=8 format=2]

[ext_resource path="res://SC_GPU_Heavy/GPUHeavy.gd" type="Script" id=1]
[ext_resource path="res://GUI/BaseInfo/GUI_BaseInfo.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI/Bench60/Bench60.tscn" type="PackedScene" id=3]
[ext_resource path="res://SC_GPU_Heavy/GPUHeavy_env.tres" type="Environment" id=4]
[ext_resource path="res://SC_GPU_Heavy/Materials/Bricks_1/bricks_1.tres" type="Material" id=5]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.501961, 0.788235, 1, 1 )
metallic = 0.43
metallic_specular = 0.44
roughness = 0.62

[sub_resource type="SpatialMaterial" id=3]
metallic = 1.0
roughness = 0.0

[node name="GPUHeavy" type="Spatial"]
script = ExtResource( 1 )

[node name="GUI_BaseInfo" parent="." instance=ExtResource( 2 )]

[node name="Bench60" parent="." instance=ExtResource( 3 )]

[node name="GPU_Heavy" type="Node" parent="."]

[node name="Camera" type="Camera" parent="GPU_Heavy"]
transform = Transform( 0.908516, -0.0174001, -0.417487, 0.0158106, 0.999849, -0.0072654, 0.41755, 6.0502e-10, 0.908654, -1.40439, 2.44955, -2.98087 )
environment = ExtResource( 4 )
far = 8192.0

[node name="SpotLight" type="SpotLight" parent="GPU_Heavy"]
transform = Transform( 0.951782, -0.138818, -0.27357, 0.306741, 0.443981, 0.841897, 0.00458932, -0.885218, 0.465155, -3.14217, 4.5778, -9.11123 )
light_energy = 0.696
light_specular = 5.26
shadow_enabled = true
shadow_color = Color( 0.180392, 0.180392, 0.180392, 1 )
shadow_bias = 0.01
shadow_reverse_cull_face = true
spot_range = 976.708
spot_attenuation = 26.9087
spot_angle = 39.52
spot_angle_attenuation = 0.318641

[node name="CSGBox" type="CSGBox" parent="GPU_Heavy"]
width = 512.0
height = 0.1
depth = 512.0
material = ExtResource( 5 )

[node name="CSGBox2" type="CSGBox" parent="GPU_Heavy"]
transform = Transform( 0.678127, 0.0848884, 0.730026, -0.121009, 0.992647, -0.00302023, -0.724915, -0.0862912, 0.683412, -0.507626, 1.47771, -12.2542 )
material = SubResource( 2 )

[node name="CSGBox3" type="CSGBox" parent="GPU_Heavy"]
transform = Transform( 2.67752, -0.32835, 2.89941, 0.684012, 2.4634, -0.73281, -1.45685, 0.553136, 4.98472, 3.96502, 2.80456, -14.381 )
width = 0.603681
material = SubResource( 3 )

[node name="ReflectionProbe" type="ReflectionProbe" parent="GPU_Heavy/CSGBox3"]
transform = Transform( 0.320102, 4.65661e-09, -2.98023e-08, -7.45058e-09, 0.392773, -1.86265e-09, 1.49012e-08, 1.86265e-09, 0.172028, 0, 0, 0 )
update_mode = 1
max_distance = 16384.0
extents = Vector3( 4.20069, 5.07974, 12.5166 )
box_projection = true
enable_shadows = true
interior_ambient_color = Color( 0.501961, 0.501961, 0.501961, 1 )
